<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="23dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:text="Some tool detailed description"
            />

        <com.maximbircu.devtools.android.presentation.tool.help.DebToolHelpDialogInfoRowLayout
            android:id="@+id/toolKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/dev_tool_help_dialog_key"
            />

        <com.maximbircu.devtools.android.presentation.tool.help.DebToolHelpDialogInfoRowLayout
            android:id="@+id/currentValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/dev_tool_help_dialog_current_value"
            />

        <com.maximbircu.devtools.android.presentation.tool.help.DebToolHelpDialogInfoRowLayout
            android:id="@+id/defaultValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/dev_tool_help_dialog_default_value"
            />
    </LinearLayout>
</ScrollView>
